SBT-7: added logic with User Creation

--- a/examples/UserStore.ipynb
+++ b/examples/UserStore.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x26ec0c3a550>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2b16980b550>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 3,
      "metadata": {},
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='103', username='sergey.kuznetsov@quantori.com', email='sergey.kuznetsov@quantori.com', alias=None, first_name='Sergey', last_name='Kuznetsov', country='USA', organization='quantori', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 7, 1, 12, 4, 53, 789000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='103', username='sergey.kuznetsov@quantori.com', email='sergey.kuznetsov@quantori.com', alias=None, first_name='Sergey', last_name='Kuznetsov', country='USA', organization='quantori', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 7, 1, 12, 51, 46, 495000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 4,
      "metadata": {},
@@ -140,7 +140,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='NEW', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='NEW', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 7,
      "metadata": {},
@@ -164,7 +164,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 8,
      "metadata": {},
@@ -206,7 +206,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 10,
      "metadata": {},
@@ -235,11 +235,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "User(is_enabled=True, id='144', username='unique2@quantori.com', email='unique2@quantori.com', alias='alias2', first_name='first_name', last_name='last_name', country='USA', organization='orga', created_at=datetime.datetime(2022, 7, 1, 12, 52, 18, 810000, tzinfo=datetime.timezone.utc), last_login_at=None)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from signals_notebook.entities.users.user import UserCreationBody\n",
+    "\n",
+    "new_user_body = UserCreationBody(\n",
+    "    alias='alias2',\n",
+    "    country='USA',\n",
+    "    email='unique2@quantori.com',\n",
+    "    first_name='first_name',\n",
+    "    last_name='last_name',\n",
+    "    organization='orga',\n",
+    ")\n",
+    "new_user = User.create(request=new_user_body)\n",
+    "new_user"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "user.alias = f'{user.first_name.lower()}.{user.last_name.lower()}'\n",
-    "user.save()"
+    "new_user.alias = f'{new_user.first_name.lower()}.{new_user.last_name.lower()}'\n",
+    "new_user.save()"
    ],
    "metadata": {
     "collapsed": false,
@@ -254,7 +288,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='144', username='unique2@quantori.com', email='unique2@quantori.com', alias='first_name.last_name', first_name='first_name', last_name='last_name', country='USA', organization='orga', created_at=datetime.datetime(2022, 7, 1, 12, 52, 18, 810000, tzinfo=datetime.timezone.utc), last_login_at=None)"
      },
      "execution_count": 16,
      "metadata": {},
@@ -262,8 +296,45 @@
     }
    ],
    "source": [
-    "user.refresh()\n",
-    "user"
+    "new_user.refresh()\n",
+    "new_user"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "new_user.delete()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "User(is_enabled=False, id='144', username='unique2@quantori.com', email='unique2@quantori.com', alias='first_name.last_name', first_name='first_name', last_name='last_name', country='USA', organization='orga', created_at=datetime.datetime(2022, 7, 1, 12, 52, 18, 810000, tzinfo=datetime.timezone.utc), last_login_at=None)"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "UserStore.get(new_user.id)"
    ],
    "metadata": {
     "collapsed": false,
