--- a/examples/Group.ipynb
+++ b/examples/Group.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1b25b1a64c0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x12022cc71f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='13385924'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:155', id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:121', id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='35011372'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:102', id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='46357805'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:156', id='156', is_system=True, name='test group3', description='New', created_at=datetime.datetime(2022, 7, 6, 12, 58, 56, 897000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 13, 31, 31, 693000, tzinfo=datetime.timezone.utc), digest='55642538'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:152', id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877')]"
+      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='13385924'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:155', id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:121', id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='35011372'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:102', id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='46357805'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:152', id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877')]"
      },
      "execution_count": 3,
      "metadata": {},
@@ -71,24 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
-     "ename": "SignalsNotebookError",
-     "evalue": "<SignalsNotebookError status=404 code=NotFound> title=The resource your required is not found. detail=>",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m                      Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [8]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m group \u001B[38;5;241m=\u001B[39m \u001B[43mGroup\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m156\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m group\n",
-      "File \u001B[1;32m~\\PycharmProjects\\pesn-python-sdk\\src\\signals_notebook\\entities\\users\\profile.py:185\u001B[0m, in \u001B[0;36mGroup.get\u001B[1;34m(cls, group_id)\u001B[0m\n\u001B[0;32m    177\u001B[0m \u001B[38;5;124;03m\"\"\"Get group by id\u001B[39;00m\n\u001B[0;32m    178\u001B[0m \n\u001B[0;32m    179\u001B[0m \u001B[38;5;124;03mArgs:\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    182\u001B[0m \u001B[38;5;124;03m    Group\u001B[39;00m\n\u001B[0;32m    183\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    184\u001B[0m api \u001B[38;5;241m=\u001B[39m SignalsNotebookApi\u001B[38;5;241m.\u001B[39mget_default_api()\n\u001B[1;32m--> 185\u001B[0m response \u001B[38;5;241m=\u001B[39m \u001B[43mapi\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcall\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    186\u001B[0m \u001B[43m    \u001B[49m\u001B[43mmethod\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mGET\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    187\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgroup_id\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    188\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    189\u001B[0m result \u001B[38;5;241m=\u001B[39m GroupResponse(\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mresponse\u001B[38;5;241m.\u001B[39mjson())\n\u001B[0;32m    190\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m cast(ResponseData, result\u001B[38;5;241m.\u001B[39mdata)\u001B[38;5;241m.\u001B[39mbody\n",
-      "File \u001B[1;32m~\\PycharmProjects\\pesn-python-sdk\\src\\signals_notebook\\api.py:152\u001B[0m, in \u001B[0;36mSignalsNotebookApi.call\u001B[1;34m(self, method, path, params, data, json, headers)\u001B[0m\n\u001B[0;32m    146\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m response\u001B[38;5;241m.\u001B[39mok:\n\u001B[0;32m    147\u001B[0m     log\u001B[38;5;241m.\u001B[39merror(\n\u001B[0;32m    148\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError has been occurred while getting response, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    149\u001B[0m         response\u001B[38;5;241m.\u001B[39mstatus_code,\n\u001B[0;32m    150\u001B[0m         extra\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresponse\u001B[39m\u001B[38;5;124m'\u001B[39m: response},\n\u001B[0;32m    151\u001B[0m     )\n\u001B[1;32m--> 152\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m SignalsNotebookError(response)\n\u001B[0;32m    153\u001B[0m log\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSuccessful request - HTTP url: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m, response\u001B[38;5;241m.\u001B[39murl, response\u001B[38;5;241m.\u001B[39mstatus_code)\n\u001B[0;32m    155\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
-      "\u001B[1;31mSignalsNotebookError\u001B[0m: <SignalsNotebookError status=404 code=NotFound> title=The resource your required is not found. detail=>"
-     ]
+     "data": {
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='13385924')"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "group = Group.get('156')\n",
+    "group = Group.get('101')\n",
     "group"
    ],
    "metadata": {
@@ -101,11 +96,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:160', id='160', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 13, 49, 50, 215000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 13, 49, 50, 215000, tzinfo=datetime.timezone.utc), digest='80413457')"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from signals_notebook.entities.users.profile import GroupRequestBody\n",
     "\n",
-    "request = GroupRequestBody(name='test group3', description='test', is_system=True)\n",
+    "request = GroupRequestBody(name='name', description='test', is_system=True)\n",
     "\n",
     "group = Group.create(request=request)\n",
     "\n",
@@ -139,6 +143,32 @@
    "outputs": [],
    "source": [
     "group.delete()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[GroupMember(user_id='107', user_name='yana.ivanova@quantori.com', first_name='Yana', last_name='Ivanova'),\n GroupMember(user_id='109', user_name='anatoliy.kind@quantori.com', first_name='Anatoliy', last_name='Kind'),\n GroupMember(user_id='104', user_name='ricardas.ralys@quantori.com', first_name='Ricardas', last_name='Ralys'),\n GroupMember(user_id='103', user_name='sergey.kuznetsov@quantori.com', first_name='Sergey', last_name='Kuznetsov'),\n GroupMember(user_id='125', user_name='sergey.ruzin@quantori.com', first_name='Sergey', last_name='Ruzin'),\n GroupMember(user_id='106', user_name='darya.korkina@quantori.com', first_name='Darya', last_name='Korkina'),\n GroupMember(user_id='105', user_name='denis.sapegin@quantori.com', first_name='Denis', last_name='Sapegin'),\n GroupMember(user_id='122', user_name='vladislav.teryaev@quantori.com', first_name='Vladislav', last_name='Teryaev'),\n GroupMember(user_id='100', user_name='stephen.tharp@perkinelmer.com', first_name='Stephen', last_name='Tharp'),\n GroupMember(user_id='121', user_name='pavel.bogdanov@quantori.com', first_name='Pavel', last_name='Bogdanov'),\n GroupMember(user_id='102', user_name='vitaliy.aronov@quantori.com', first_name='Vitaliy', last_name='Aronov'),\n GroupMember(user_id='146', user_name='elena.test_this@perkinelmer.com', first_name='test', last_name='account'),\n GroupMember(user_id='124', user_name='andrey.brovko@quantori.com', first_name='Andrey', last_name='Brovko'),\n GroupMember(user_id='145', user_name='test.account@perkinelmer.com', first_name='test', last_name='account'),\n GroupMember(user_id='101', user_name='richard.golob@quantori.com', first_name='Richard', last_name='Golob'),\n GroupMember(user_id='140', user_name='alexander.shlyonov@quantori.com', first_name='Alexander', last_name='Shlyonov'),\n GroupMember(user_id='120', user_name='elena.krutenkova@quantori.com', first_name='Elena', last_name='Krutenkova'),\n GroupMember(user_id='142', user_name='ksenia.yankovskaya@quantori.com', first_name='Ksenia', last_name='Yankovskaya'),\n GroupMember(user_id='141', user_name='evgenia.tikeeva@quantori.com', first_name='Evgenia', last_name='Tikeeva'),\n GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov'),\n GroupMember(user_id='118', user_name='roman.voronov@quantori.com', first_name='Roman', last_name='Voronov'),\n GroupMember(user_id='137', user_name='david.paskoshev@quantori.com', first_name='David', last_name='Paskoshev'),\n GroupMember(user_id='115', user_name='vladislav.kuznetsov@quantori.com', first_name='Vlad', last_name='Kuznetsov'),\n GroupMember(user_id='136', user_name='daniil.cherednichenko@quantori.com', first_name='Daniil', last_name='Cherednichenko'),\n GroupMember(user_id='114', user_name='roman.maksimov@quantori.com', first_name='Roman', last_name='Maksimov'),\n GroupMember(user_id='139', user_name='andrey.guschin@quantori.com', first_name='Andrey', last_name='Guschin'),\n GroupMember(user_id='117', user_name='grigol.tchkoidze@quantori.com', first_name='Grigol', last_name='Tchkoidze'),\n GroupMember(user_id='133', user_name='andrey.shishkin@quantori.com', first_name='Andrey', last_name='Shishkin'),\n GroupMember(user_id='111', user_name='lidiya.smyshlyaeva@quantori.com', first_name='Lidiya', last_name='Smyshlyaeva'),\n GroupMember(user_id='110', user_name='fedor.kortikov@quantori.com', first_name='Fedor', last_name='Kortikov'),\n GroupMember(user_id='113', user_name='vladimir.arefyev@quantori.com', first_name='Vladimir', last_name='Arefyev'),\n GroupMember(user_id='112', user_name='dmitry.lushnikov@quantori.com', first_name='Dmitry', last_name='Lushnikov'),\n GroupMember(user_id='134', user_name='sayat.petrosyan@quantori.com', first_name='Sayat', last_name='Petrosyan')]"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group = Group.get('101')\n",
+    "\n",
+    "members = group.get_members()\n",
+    "list(members)"
    ],
    "metadata": {
     "collapsed": false,
