SBT-24. add method to add users to group

--- a/examples/Group.ipynb
+++ b/examples/Group.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x12022cc71f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x274e57281f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -99,7 +99,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:160', id='160', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 13, 49, 50, 215000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 13, 49, 50, 215000, tzinfo=datetime.timezone.utc), digest='80413457')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:165', id='165', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 14, 21, 12, 955000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 14, 21, 12, 955000, tzinfo=datetime.timezone.utc), digest='53341450')"
      },
      "execution_count": 5,
      "metadata": {},
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.entities.users.profile import GroupRequestBody\n",
+    "from signals_notebook.entities.users.group import GroupRequestBody\n",
     "\n",
     "request = GroupRequestBody(name='name', description='test', is_system=True)\n",
     "\n",
@@ -140,9 +140,48 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov')]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "group.delete()"
+    "from signals_notebook.entities import UserStore\n",
+    "\n",
+    "user = UserStore.get('119')\n",
+    "\n",
+    "group.add_user(user)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov'),\n GroupMember(user_id='103', user_name='sergey.kuznetsov@quantori.com', first_name='Sergey', last_name='Kuznetsov')]"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# group = Group.get('164')\n",
+    "\n",
+    "members = group.get_members()\n",
+    "list(members)"
    ],
    "metadata": {
     "collapsed": false,
@@ -154,21 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[GroupMember(user_id='107', user_name='yana.ivanova@quantori.com', first_name='Yana', last_name='Ivanova'),\n GroupMember(user_id='109', user_name='anatoliy.kind@quantori.com', first_name='Anatoliy', last_name='Kind'),\n GroupMember(user_id='104', user_name='ricardas.ralys@quantori.com', first_name='Ricardas', last_name='Ralys'),\n GroupMember(user_id='103', user_name='sergey.kuznetsov@quantori.com', first_name='Sergey', last_name='Kuznetsov'),\n GroupMember(user_id='125', user_name='sergey.ruzin@quantori.com', first_name='Sergey', last_name='Ruzin'),\n GroupMember(user_id='106', user_name='darya.korkina@quantori.com', first_name='Darya', last_name='Korkina'),\n GroupMember(user_id='105', user_name='denis.sapegin@quantori.com', first_name='Denis', last_name='Sapegin'),\n GroupMember(user_id='122', user_name='vladislav.teryaev@quantori.com', first_name='Vladislav', last_name='Teryaev'),\n GroupMember(user_id='100', user_name='stephen.tharp@perkinelmer.com', first_name='Stephen', last_name='Tharp'),\n GroupMember(user_id='121', user_name='pavel.bogdanov@quantori.com', first_name='Pavel', last_name='Bogdanov'),\n GroupMember(user_id='102', user_name='vitaliy.aronov@quantori.com', first_name='Vitaliy', last_name='Aronov'),\n GroupMember(user_id='146', user_name='elena.test_this@perkinelmer.com', first_name='test', last_name='account'),\n GroupMember(user_id='124', user_name='andrey.brovko@quantori.com', first_name='Andrey', last_name='Brovko'),\n GroupMember(user_id='145', user_name='test.account@perkinelmer.com', first_name='test', last_name='account'),\n GroupMember(user_id='101', user_name='richard.golob@quantori.com', first_name='Richard', last_name='Golob'),\n GroupMember(user_id='140', user_name='alexander.shlyonov@quantori.com', first_name='Alexander', last_name='Shlyonov'),\n GroupMember(user_id='120', user_name='elena.krutenkova@quantori.com', first_name='Elena', last_name='Krutenkova'),\n GroupMember(user_id='142', user_name='ksenia.yankovskaya@quantori.com', first_name='Ksenia', last_name='Yankovskaya'),\n GroupMember(user_id='141', user_name='evgenia.tikeeva@quantori.com', first_name='Evgenia', last_name='Tikeeva'),\n GroupMember(user_id='119', user_name='evgeniy.pokidov@quantori.com', first_name='Evgeniy', last_name='Pokidov'),\n GroupMember(user_id='118', user_name='roman.voronov@quantori.com', first_name='Roman', last_name='Voronov'),\n GroupMember(user_id='137', user_name='david.paskoshev@quantori.com', first_name='David', last_name='Paskoshev'),\n GroupMember(user_id='115', user_name='vladislav.kuznetsov@quantori.com', first_name='Vlad', last_name='Kuznetsov'),\n GroupMember(user_id='136', user_name='daniil.cherednichenko@quantori.com', first_name='Daniil', last_name='Cherednichenko'),\n GroupMember(user_id='114', user_name='roman.maksimov@quantori.com', first_name='Roman', last_name='Maksimov'),\n GroupMember(user_id='139', user_name='andrey.guschin@quantori.com', first_name='Andrey', last_name='Guschin'),\n GroupMember(user_id='117', user_name='grigol.tchkoidze@quantori.com', first_name='Grigol', last_name='Tchkoidze'),\n GroupMember(user_id='133', user_name='andrey.shishkin@quantori.com', first_name='Andrey', last_name='Shishkin'),\n GroupMember(user_id='111', user_name='lidiya.smyshlyaeva@quantori.com', first_name='Lidiya', last_name='Smyshlyaeva'),\n GroupMember(user_id='110', user_name='fedor.kortikov@quantori.com', first_name='Fedor', last_name='Kortikov'),\n GroupMember(user_id='113', user_name='vladimir.arefyev@quantori.com', first_name='Vladimir', last_name='Arefyev'),\n GroupMember(user_id='112', user_name='dmitry.lushnikov@quantori.com', first_name='Dmitry', last_name='Lushnikov'),\n GroupMember(user_id='134', user_name='sayat.petrosyan@quantori.com', first_name='Sayat', last_name='Petrosyan')]"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "group = Group.get('101')\n",
-    "\n",
-    "members = group.get_members()\n",
-    "list(members)"
+    "group.delete()"
    ],
    "metadata": {
     "collapsed": false,
