SBT-24. add method to delete user from group

--- a/examples/Group.ipynb
+++ b/examples/Group.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x274e57281f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1d8a76f71f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -99,7 +99,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:165', id='165', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 14, 21, 12, 955000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 14, 21, 12, 955000, tzinfo=datetime.timezone.utc), digest='53341450')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:166', id='166', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 14, 26, 32, 551000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 14, 26, 32, 551000, tzinfo=datetime.timezone.utc), digest='40854918')"
      },
      "execution_count": 5,
      "metadata": {},
@@ -178,8 +178,6 @@
     }
    ],
    "source": [
-    "# group = Group.get('164')\n",
-    "\n",
     "members = group.get_members()\n",
     "list(members)"
    ],
@@ -193,6 +191,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "group.delete_user(user)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "group.delete()"
