SBT-24. group request body to create

--- a/examples/Group.ipynb
+++ b/examples/Group.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1d8a76f71f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x179f0e364c0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='13385924'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:155', id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:121', id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='35011372'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:102', id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='46357805'),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:152', id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877')]"
+      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, id='155', is_system=False, name='test group2', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 57, 48, 304000, tzinfo=datetime.timezone.utc), digest='98434818'),\n Group(type=<ObjectType.GROUP: 'group'>, id='121', is_system=True, name='ASG', description='The group dedicated to the synthesis, QC, and pre-clinical trials of alprostadil', created_at=datetime.datetime(2021, 11, 21, 10, 54, 45, 346000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 11, 21, 10, 57, 27, 267000, tzinfo=datetime.timezone.utc), digest='54719442'),\n Group(type=<ObjectType.GROUP: 'group'>, id='152', is_system=False, name='test group', description='test', created_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 12, 32, 16, 957000, tzinfo=datetime.timezone.utc), digest='33844877'),\n Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='22297858'),\n Group(type=<ObjectType.GROUP: 'group'>, id='102', is_system=True, name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), digest='93636027')]"
      },
      "execution_count": 3,
      "metadata": {},
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.entities import Group\n",
+    "from signals_notebook.users import Group\n",
     "\n",
     "group = Group.get_list()\n",
     "list(group)"
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='13385924')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='101', is_system=True, name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), digest='22297858')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -99,7 +99,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, eid='group:166', id='166', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 6, 14, 26, 32, 551000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 6, 14, 26, 32, 551000, tzinfo=datetime.timezone.utc), digest='40854918')"
+      "text/plain": "Group(type=<ObjectType.GROUP: 'group'>, id='174', is_system=True, name='name', description='test', created_at=datetime.datetime(2022, 7, 12, 8, 32, 10, 6000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 8, 32, 10, 6000, tzinfo=datetime.timezone.utc), digest='38068452')"
      },
      "execution_count": 5,
      "metadata": {},
@@ -107,11 +107,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.entities.users.group import GroupRequestBody\n",
-    "\n",
-    "request = GroupRequestBody(name='name', description='test', is_system=True)\n",
-    "\n",
-    "group = Group.create(request=request)\n",
+    "group = Group.create(name='name', description='test', is_system=True)\n",
     "\n",
     "group"
    ],
@@ -151,7 +147,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.entities import UserStore\n",
+    "from signals_notebook.users import UserStore\n",
     "\n",
     "user = UserStore.get('119')\n",
     "\n",
