SBT-24. fixed tests and imports

--- a/examples/Role.ipynb
+++ b/examples/Role.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x204ac0e1220>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x27133c17520>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -49,7 +49,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Role(id=1, name='System Admin', description='Users with this role have all privileges.', privileges=RolePrivelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id=2, name='Config Admin', description='Users with this role have privileges for accessing SNConfig and managing metadata.', privileges=RolePrivelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id=3, name='Standard User', description='All users in the system will always have this role.', privileges=RolePrivelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id=4, name='Inventory Admin', description='Users with this role have privileges of inventory admin.', privileges=RolePrivelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True))]"
+      "text/plain": "[Role(id='1', name='System Admin', description='Users with this role have all privileges.', privileges=Privelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id='2', name='Config Admin', description='Users with this role have privileges for accessing SNConfig and managing metadata.', privileges=Privelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id='3', name='Standard User', description='All users in the system will always have this role.', privileges=Privelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True)),\n Role(id='4', name='Inventory Admin', description='Users with this role have privileges of inventory admin.', privileges=Privelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True))]"
      },
      "execution_count": 3,
      "metadata": {},
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "from signals_notebook.entities import Role\n",
+    "from signals_notebook.users.role import Role\n",
     "\n",
     "role = Role.get_list()\n",
     "list(role)"
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Role(id=1, name='System Admin', description='Users with this role have all privileges.', privileges=RolePrivelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True))"
+      "text/plain": "Role(id='1', name='System Admin', description='Users with this role have all privileges.', privileges=Privelege(can_move_experiments=True, can_manage_system_templates=True, can_trash_requests=True, can_trash_samples=True, can_share=True, can_add_materials=True, can_trash_experiments=True, can_trash_materials=True, can_trash_notebooks=True, can_view_materials=True, can_manage_material_libraries=True, can_share_templates=True, can_manage_attributes=True, can_manage_groups=True, can_search_eln_archive=True, can_configure=True, can_edit_materials=True))"
      },
      "execution_count": 4,
      "metadata": {},
