SBT-42. get options

--- a/examples/Attributes.ipynb
+++ b/examples/Attributes.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x235c7901040>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x252b91fc490>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -84,19 +84,10 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[Attribute(type='attribute', id='attribute:8', name='GHS Signal Words'),\n Attribute(type='attribute', id='attribute:10', name='Hazard Statements'),\n Attribute(type='attribute', id='attribute:11', name='GHS Hazards'),\n Attribute(type='attribute', id='attribute:14', name='Task Status'),\n Attribute(type='attribute', id='attribute:18', name='Inventory Security'),\n Attribute(type='attribute', id='attribute:9', name='Precautionary Statements'),\n Attribute(type='attribute', id='attribute:4', name='Material Library Type'),\n Attribute(type='attribute', id='attribute:24', name='HPLC Sample Type'),\n Attribute(type='attribute', id='attribute:26', name='newAttribute'),\n Attribute(type='attribute', id='attribute:20', name='My List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:28', name='test'),\n Attribute(type='attribute', id='attribute:17', name='Inventory Container Library'),\n Attribute(type='attribute', id='attribute:16', name='Inventory Location Library'),\n Attribute(type='attribute', id='attribute:21', name='My Ext List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:25', name='Primer. Forward or Reverse'),\n Attribute(type='attribute', id='attribute:23', name='HPLC Method'),\n Attribute(type='attribute', id='attribute:19', name='My Number Sequence Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:5', name='Product Id'),\n Attribute(type='attribute', id='attribute:6', name='Parallel Subexperiment Id'),\n Attribute(type='attribute', id='attribute:12', name='Sample Id'),\n Attribute(type='attribute', id='attribute:13', name='Task Id'),\n Attribute(type='attribute', id='attribute:15', name='Order Id')]"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "attributes = Attribute.get_list()\n",
-    "list(attributes)"
+    "all_attributes = list(attributes)"
    ],
    "metadata": {
     "collapsed": false,
@@ -108,22 +99,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Attribute(type='choice', id='attribute:32', name='test1')"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from signals_notebook.attributes.attribute import AttributeOption\n",
     "\n",
     "option = AttributeOption(id='1', key='key', value='value')\n",
-    "new_attribute = Attribute.create(name='test1', type='choice', description='description', options=[option])\n",
-    "new_attribute"
+    "new_attribute = Attribute.create(name='test2', type='choice', description='descriptions', options=[option])"
    ],
    "metadata": {
     "collapsed": false,
@@ -151,7 +132,7 @@
    ],
    "source": [
     "new_attribute.options = []\n",
-    "new_attribute.save()"
+    "new_attribute.save()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -192,7 +173,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "attribute('INCORRECT')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
