--- a/examples/Attributes.ipynb
+++ b/examples/Attributes.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x252b91fc490>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2471cbba490>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -63,7 +63,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Attribute(type='choice', id='attribute:8', name='GHS Signal Words')"
+      "text/plain": "[AttributeOption(id=None, key='CURRENT_DATE', value='CURRENT_DATE')]"
      },
      "execution_count": 4,
      "metadata": {},
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "attribute = Attribute.get('attribute:8')\n",
+    "attribute = Attribute.get('attribute:2')\n",
     "attribute"
    ],
    "metadata": {
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from signals_notebook.attributes.attribute import AttributeOption\n",
     "\n",
     "option = AttributeOption(id='1', key='key', value='value')\n",
-    "new_attribute = Attribute.create(name='test2', type='choice', description='descriptions', options=[option])"
+    "new_attribute = Attribute.create(name='test3', type='choice', description='descriptions', options=[option])"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "ename": "ValueError",
@@ -124,7 +124,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39moptions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      2\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39msave()\n",
+      "Input \u001B[1;32mIn [8]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39moptions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      2\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39msave()\n",
       "File \u001B[1;32mc:\\users\\andrey.shishkin\\pycharmprojects\\pesn-python-sdk\\venv\\lib\\site-packages\\pydantic\\main.py:357\u001B[0m, in \u001B[0;36mpydantic.main.BaseModel.__setattr__\u001B[1;34m()\u001B[0m\n",
       "\u001B[1;31mValueError\u001B[0m: \"Attribute\" object has no field \"options\""
      ]
@@ -132,7 +132,7 @@
    ],
    "source": [
     "new_attribute.options = []\n",
-    "new_attribute.save()\n"
+    "new_attribute.save()"
    ],
    "metadata": {
     "collapsed": false,
