add method delete in material

--- a/examples/Materials.ipynb
+++ b/examples/Materials.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x22f9ad33370>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x162b3c80070>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -93,7 +93,10 @@
       "assetType:620b971e9a486b3ddae61f4f Culture medias\n",
       "assetType:620dddad587d0c711fdd8862 Compound for OLED cell\n",
       "assetType:621701e99a486b3ddae63bc0 Brain photo\n",
-      "assetType:625436287e0e8f57cc5cd892 DNAMaterials\n"
+      "assetType:625436287e0e8f57cc5cd892 DNAMaterials\n",
+      "assetType:62da6564d33f8760ff9e8341 Compounds copy\n",
+      "assetType:62debcf9d33f8760ff9e8af5 Lab Animal 1 Restore\n",
+      "assetType:62dec178d33f8760ff9e8b01 Reagents (SNB) Copy2\n"
      ]
     }
    ],
@@ -578,7 +581,8 @@
     "text = EntityStore.get('text:dc023925-847c-4d25-9aa2-c9f58fa0fc8a')\n",
     "\n",
     "\n",
-    "unit_lib.create_batch(asset_name = 'UNT-0002', batch_fields={'Originating Experiment': text})\n"
+    "batch = unit_lib.create_batch(asset_name = 'UNT-0002', batch_fields={'Originating Experiment': text})\n",
+    "batch.delete()"
    ],
    "metadata": {
     "collapsed": false,
@@ -590,21 +594,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Asset(asset_type_id='619656d40669900007d69414', eid='asset:62bd783857852b2be428a37f', library_name='Units', digest='49949349', name='UNT-0036', created_at=datetime.datetime(2022, 6, 30, 10, 17, 28, 618000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 30, 10, 17, 28, 618000, tzinfo=datetime.timezone.utc), type=<MaterialType.ASSET: 'asset'>)"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unit_lib.create_asset_with_batches(asset_with_batch_fields={\n",
+    "asset_with_batches = unit_lib.create_asset_with_batches(asset_with_batch_fields={\n",
     "    \"asset\":{\"Unit Name\": \"Created\"},\n",
     "    \"batch\":{'Originating Experiment': text}\n",
-    "})"
+    "})\n",
+    "asset_with_batches.delete()"
    ],
    "metadata": {
     "collapsed": false,
@@ -655,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from common_types import File\n",
@@ -675,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from signals_notebook.common_types import MID\n",
