SBT-73 Custom System Object templates + investigate ability to dump them: fixed jupyter notebook

--- a/examples/AdminDefinedObject.ipynb
+++ b/examples/AdminDefinedObject.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1bd2cef04f0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1c30d0744f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -66,7 +66,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "AdoType[TypeName](id='2', base_type='experiment', ado_name=<TypeName.NEW_OBJECT: 'New System Object (SK)'>)"
+      "text/plain": "AdoType(id='2', base_type='experiment', ado_name='New System Object (SK)')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import AdminDefinedObject\n",
@@ -159,7 +159,7 @@
     "notebook = EntityStore.get('journal:151542f5-dcc2-4dc7-bfc3-c5f0d204ea4c')\n",
     "new_ado = AdminDefinedObject.create(\n",
     "    name='AdminDefinedObject experiment created by SDK',\n",
-    "    ado_type_name=AdminDefinedObject.TypeName.NEW_OBJECT,\n",
+    "    ado_type_name='New System Object (SK)',\n",
     "    description='Delete if you see this in UI',\n",
     "    notebook=notebook,\n",
     ")"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "EntityStore.delete(new_ado.eid)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
